# stock-logistics-warehouse

./: .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  __openerp__.py  groups  oca_dependencies.txt  project.config  requirements.txt  test-requirements.txt
account_move_line_product/: README.rst  __init__.py  __manifest__.py  __openerp__.py
account_move_line_stock_info/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
base_iso3166/: README.rst  __manifest__.py
base_product_merge/: README.rst  __init__.py  __manifest__.py  __openerp__.py
base_tier_validation/: README.rst  __init__.py  __manifest__.py
base_uom_merge/: README.rst  __manifest__.py
business_product_location/: README.rst  __manifest__.py  __openerp__.py
configurable_stock_level/: __manifest__.py  __openerp__.py  product.py  product_view.xml  stock_level_configuration_view.xml
configurable_stock_level_unported/: stock_level_configuration.py
ddmrp/: README.rst  __init__.py  __openerp__.py
i18n/: sl.po
models/: stock.py
mrp_quant_manual_assign/: __manifest__.py
packaging_extended/: README.rst
packaging_uom/: README.rst  __init__.py  __manifest__.py  __openerp__.py
packaging_uom_view/: README.rst  __manifest__.py
partner_area_data/: __openerp__.py
partner_area_management/: __openerp__.py
partner_location_auto_create/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
portal_stock_location_content_template/: README.rst  __init__.py  __manifest__.py
procurement_auto_create_group/: README.rst  __init__.py  __manifest__.py  __openerp__.py
product_cost_evaluation/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+8185 files in other folders)
