[project]
name = "odoo-addons-oca-stock-logistics-warehouse"
version = "17.0.20240318.0"
dependencies = [
    "odoo-addon-scrap_reason_code>=17.0dev,<17.1dev",
    "odoo-addon-stock_mts_mto_rule>=17.0dev,<17.1dev",
    "odoo-addon-stock_warehouse_calendar>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
